<resources>
    <string name="app_name">MovieDB Caparros</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint">Titre, acteur, mot clé</string>
    <string name="language">Langue</string>
    <string name="quality_poster">Qualité poster</string>
    <string name="small">Petit</string>
    <string name="medium">Moyen</string>
    <string name="big">Grand</string>
    <string name="about">A propos</string>
</resources>
